Portfolio-RaúlM.html version2
Añadiendo proyecto bootstrap

--- a/Portfolio-RaúlM.html
+++ b/Portfolio-RaúlM.html
@@ -803,6 +803,11 @@
                         <a href="https://github.com/rmoralesinformatica/portfolio?raw=true"
                             class="text-decoration-none ">Portfolio</a>
                     </li>
+                      <li class="my-3 d-flex align-items-center mx-5 ">
+                        <i class="bi bi-github mx-5 "></i>
+                        <a href="https://github.com/rmoralesinformatica/Bootstrap"
+                            class="text-decoration-none ">Bootstrap</a>
+                    </li>
                 </ul>
             </div>
         </div>
