--- a/Portfolio-RaúlM.html
+++ b/Portfolio-RaúlM.html
@@ -727,9 +727,8 @@
                                             </div>
                                             <div class="ms-3">
                                                 <span class="fa-1x">Nombre: </span>
-                                                <a href="https://www.ejemplo.com" class="text-decoration-none"
-                                                    target="_blank">Nombre
-                                                    empresa</a>
+                                                <a href="https://inforware.es/" class="text-decoration-none"
+                                                    target="_blank">Inforware</a>
                                             </div>
                                         </div>
 
@@ -739,7 +738,7 @@
                                                 <i class="bi bi-clock ms-5"></i>
                                             </div>
                                             <div class="ms-3">
-                                                <span class="fa-1x">Duración:</span> 400 horas (FCT)
+                                                <span class="fa-1x">Duración:</span> marzo-2022 / junio 2023
                                             </div>
                                         </div>
 
